--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* styles.css */
+.top-loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: #fff;
+    z-index: 9999;
+}
+
+.top-loader-progress {
+    height: 100%;
+    background-color: purple;
+    animation: loader-progress 1s linear infinite;
+}
+
+@keyframes loader-progress {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
